add favorite read html file and header scss and variables

--- a/src/favorite.html
+++ b/src/favorite.html
@@ -10,7 +10,7 @@
   <body class="darkMode">
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
-    <include src="./partials/header.html"></include>
+    <include src="./partials/header_favorite.html"></include>
   </body>
-  
-</html>
+    
+  </html>
