--- a/src/read.html
+++ b/src/read.html
@@ -9,8 +9,8 @@
   </head>
   <body class="darkMode">
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-    <include src="./partials/header_read.html"></include>
+   
+    <include src="./partials/header.html"></include>
   </body>
     
 </html>
