--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&family=Poppins&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body class="darkMode">
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    
+
     <include src="./partials/header.html"></include>
+    <include src="./partials/categories.html"></include>
+    <include src="./partials/newsgrid.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
-  
 </html>
