--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
     <include src="./partials/header.html"></include>
+    <include src="./partials/categories_calendar.html"></include>
+
   </body>
   
 </html>
