--- a/src/favorite.html
+++ b/src/favorite.html
@@ -11,6 +11,13 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
    
     <include src="./partials/header.html"></include>
+    <main>
+      <div class="container">
+        <ul class="favourite-list">
+          <!--<li class="favourite-item"-->
+        </ul>
+      </div>
+    </main>
   </body>
     
   </html>
