--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,7 @@
 
     <include src="./partials/newsgrid.html"></include>
     <include src="./partials/footer.html"></include>
+
+    <script src="./js/calendar.js"></script>
   </body>
 </html>
