--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="dark">
+<body>
 	<!-- ❗️❗️❗️ Add partials like so for every page -->
 
 	<include src="./partials/header.html"></include>
