--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
 
     <include src="./partials/header.html"></include>
+    
     <include src="./partials/categories_calendar.html"></include>
+    <include src="./partials/news.html"></include>
 
     <include src="./partials/newsgrid.html"></include>
     <include src="./partials/footer.html"></include>
