--- a/src/read.html
+++ b/src/read.html
@@ -12,9 +12,31 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body class="darkMode">
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-   
     <include src="./partials/header.html"></include>
+    <main>
+      <section class="read-page">
+        <div class="container">
+          <div class="undefined">
+            <b class="undefined__text">We haven’t found news from <br> this category</b>
+            <img class="undefined__pic" src="./images/undefined-pic.png" alt="newspaper">
+          </div>
+          <ul class="read-list">
+            <!-- <li class="read-list__item">
+              <button class="read-list__button" type="button">
+              <span class="read-list__data">18/02/2023</span>
+              <span><svg class="read-list__icon" width="9" height="15" >
+                <use href="./images/sprite.svg#icon-categoriesList-closed"></use>
+              </svg></span>
+              </button>
+              <ul class="card-list is-hidden">
+                <li></li>
+              </ul>
+            </li> -->
+          </ul>
+        </div>
+      </section>
+    </main>
+    <!-- <script type="module" src="./js/read-page-marcup.js"></script> -->
   </body>
     
 </html>
