One container for all sections.

--- a/src/favorite.html
+++ b/src/favorite.html
@@ -13,15 +13,16 @@
   </head>
   <body class="darkMode">
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-   
+
     <include src="./partials/header.html"></include>
     <main>
-      <div class="container">
-        <ul class="favourite-list">
-          <!--<li class="favourite-item"-->
-        </ul>
-      </div>
+      <section class="favorite">
+        <div class="container">
+          <ul class="favourite-list">
+            <!--<li class="favourite-item"-->
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
-    
-  </html>
+</html>
