create dark-theme.scss file

--- a/src/read.html
+++ b/src/read.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&family=Poppins&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
-  </head>
-  <body class="darkMode">
-    <include src="./partials/header.html"></include>
-    <main>
-      <section class="read-page">
-        <div class="container">
-          <div class="undefined">
-            <b class="undefined__text">We haven’t found news from <br> this category</b>
-            <img class="undefined__pic" src="./images/undefined-pic.png" alt="newspaper">
-          </div>
-          <ul class="read-list">
-            <!-- <li class="read-list__item">
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Page title</title>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&family=Poppins&family=Roboto&display=swap"
+		rel="stylesheet" />
+	<link rel="stylesheet" href="./sass/index.scss" />
+	<script type="module" src="./index.js"></script>
+</head>
+
+<body class="">
+	<include src="./partials/header.html"></include>
+	<main>
+		<section class="read-page">
+			<div class="container">
+				<div class="undefined">
+					<b class="undefined__text">We haven’t found news from <br> this category</b>
+					<img class="undefined__pic" src="./images/undefined-pic.png" alt="newspaper">
+				</div>
+				<ul class="read-list">
+					<!-- <li class="read-list__item">
               <button class="read-list__button" type="button">
               <span class="read-list__data">18/02/2023</span>
               <span><svg class="read-list__icon" width="9" height="15" >
@@ -32,11 +33,11 @@
                 <li></li>
               </ul>
             </li> -->
-          </ul>
-        </div>
-      </section>
-    </main>
-    <!-- <script type="module" src="./js/read-page-marcup.js"></script> -->
-  </body>
-    
+				</ul>
+			</div>
+		</section>
+	</main>
+	<!-- <script type="module" src="./js/read-page-marcup.js"></script> -->
+</body>
+
 </html>
