adding news-card to localStorage - favorite

--- a/src/favorite.html
+++ b/src/favorite.html
@@ -18,7 +18,7 @@
     <main>
       <section class="favorite">
         <div class="container">
-          <ul class="favourite-list">
+          <ul class="favorite-list">
             <!--<li class="favourite-item"-->
           </ul>
         </div>
