--- a/src/favorite.html
+++ b/src/favorite.html
@@ -13,7 +13,6 @@
   </head>
   <body class="darkMode">
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-
     <include src="./partials/header.html"></include>
     <main>
       <section class="favorite">
@@ -24,5 +23,6 @@
         </div>
       </section>
     </main>
+  <script type="module" src="./index.js"></script>
   </body>
 </html>
