--- a/src/read.html
+++ b/src/read.html
@@ -9,7 +9,6 @@
 		href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&family=Poppins&family=Roboto&display=swap"
 		rel="stylesheet" />
 	<link rel="stylesheet" href="./sass/index.scss" />
-	<script type="module" src="./index.js"></script>
 </head>
 
 <body class="">
@@ -37,7 +36,7 @@
 			</div>
 		</section>
 	</main>
-	<!-- <script type="module" src="./js/read-page-marcup.js"></script> -->
+	<script type="module" src="./js/read-page.js"></script>
 </body>
 
 </html>
