--- a/src/favorite.html
+++ b/src/favorite.html
@@ -23,6 +23,6 @@
         </div>
       </section>
     </main>
-  <script type="module" src="./js/render-favorite.js"></script>
+  <script type="module" src="./favorite.js"></script>
   </body>
 </html>
