--- a/src/read.html
+++ b/src/read.html
@@ -12,7 +12,139 @@
 </head>
 
 <body class="">
-	<include src="./partials/header.html"></include>
+	<header class="header">
+		<div class="mobile-menu visually-hidden">
+			<div class="menu-container">
+				<a href="./index.html" class="logo">News</a>
+				<button class="js-close-button">
+					<svg class="icon-close" width="24px" height="24px">
+						<use href="./images/sprite.svg#icon-menu-close"></use>
+					</svg>
+				</button>
+			</div>
+			<nav class="menu-nav">
+				<ul class="menu-nav__list">
+					<li class="menu-nav__item">
+						<a class="menu-nav__link" href="./index.html">
+							<svg class="menu-nav__icon" width="32" height="32">
+								<use href="./images/sprite.svg#icon-home"></use>
+							</svg>
+							<p class="menu-nav_text">Home</p>
+						</a>
+						<a class="menu-nav__link--arrow" href="./index.html">
+							<svg width="24" height="24">
+								<use href="./images/sprite.svg#icon-mobileMenu-rightArrow"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="menu-nav__item">
+						<a class="menu-nav__link" href="./favorite.html">
+							<svg class="menu-nav__icon" width="32" height="32">
+								<use href="./images/sprite.svg#icon-heart-menu"></use>
+							</svg>
+							<p class="menu-nav__text">Favourite</p>
+						</a>
+						<a class="menu-nav__link--arrow" href="./favorite.html">
+							<svg width="24" height="24">
+								<use href="./images/sprite.svg#icon-mobileMenu-rightArrow"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="menu-nav__item">
+						<a class="menu-nav__link" href="./read.html">
+							<svg class="menu-nav__icon" width="32" height="32">
+								<use href="./images/sprite.svg#icon-read"></use>
+							</svg>
+							<p class="menu-nav__text">Read</p>
+						</a>
+						<a class="menu-nav__link--arrow" href="./read.html">
+							<svg width="24" height="24">
+								<use href="./images/sprite.svg#icon-mobileMenu-rightArrow"></use>
+							</svg>
+						</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="theme-switcher">
+				<svg class="theme-switcher__icon" width="21" height="21">
+					<use href="./images/sprite.svg#icon-sun-active"></use>
+				</svg>
+				<label>
+					<input type="checkbox" class="switcher" />
+					<span class="check"></span>
+				</label>
+				<svg class="theme-switcher__icon" width="21" height="21">
+					<use href="./images/sprite.svg#icon-moon"></use>
+				</svg>
+			</div>
+		</div>
+	
+		<div class="header-container container">
+			<div class="nav-wrapper">
+				<a href="./index.html" class="logo">News</a>
+				<nav class="navigation visually-hidden">
+					<ul class="navlist">
+						<li class="navlist__item">
+							<a href="./index.html" class="navlist__link">Home</a>
+						</li>
+	
+						<li class="navlist__item">
+							<a href="./favorite.html" class="navlist__link">Favorite</a>
+						</li>
+	
+						<li class="navlist__item">
+							<a href="./read.html" class="navlist__link navlist__link--current">Read</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+	
+			<div class="menu-wrapper">
+				<div class="search-wrapper">
+					<form class="search-form" id="form-field">
+						<label class="search-form__label">
+							<input class="search-form__input" type="text" id="search-field__input" placeholder="Search |" />
+						</label>
+						<button type="submit" class="search-form__btn" id="form-btn">
+							<svg class="search-form__icon" width="20" height="20">
+								<use href="./images/sprite.svg#icon-search"></use>
+							</svg>
+						</button>
+					</form>
+	
+					<button type="button" class="search-btn" id="search-btn">
+						<svg class="search-form__icon" width="20" height="20">
+							<use href="./images/sprite.svg#icon-search"></use>
+						</svg>
+					</button>
+				</div>
+				<div class="theme">
+					<svg class="theme__svg sun" width="21" height="21">
+						<use href="./images/sprite.svg#icon-sun"></use>
+					</svg>
+	
+					<p class="theme__light">Light</p>
+	
+					<label class="switch">
+						<input type="checkbox" class="switch-checkbox" />
+						<span class="slider-round"></span>
+					</label>
+	
+					<p class="theme__dark opacity">Dark</p>
+	
+					<svg class="theme__svg moon" width="21" height="21">
+						<use href="./images/sprite.svg#icon-moon"></use>
+					</svg>
+				</div>
+	
+				<button type="button" class="mobile-button js-open-menu" aria-expanded="false">
+					<svg class="icon" width="24" height="24">
+						<use href="./images/sprite.svg#icon-menu-burger"></use>
+					</svg>
+				</button>
+			</div>
+		</div>
+	</header>
 	<main>
 		<section class="read-page">
 			<div class="container">
