--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,6 @@
 
     <!-- <include src="./partials/example.html"></include> -->
     <script type="module" src="./index.js"></script>
+    <script src="./js/pagination_m.js"></script>
   </body>
 </html>
