--- a/src/read.html
+++ b/src/read.html
@@ -157,6 +157,7 @@
 		</div>
 	</header>
 	<main>
+		<h1 class="visually-hidden">Read</h1>
 		<section class="read-page">
 			<div class="container">
 				<div class="undefined">
