styles in favorite

--- a/src/favorite.html
+++ b/src/favorite.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Page title</title>
+	<title>Favorite</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<link
@@ -160,10 +160,11 @@
 		</div>
 	</header>
 	<main>
+		<h1 class="visually-hidden">Favorite</h1>
 		<section class="favorite">
 			<div class="container">
 				<ul class="favorite-list">
-					<!--<li class="favourite-item"-->
+					<!--<li class="favorite-item"-->
 				</ul>
 			</div>
 		</section>
