--- a/src/favorite.html
+++ b/src/favorite.html
@@ -163,6 +163,10 @@
 		<h1 class="visually-hidden">Favorite</h1>
 		<section class="favorite">
 			<div class="container">
+				<div class="undefined">
+					<b class="undefined__text">We haven’t found news from <br> this category</b>
+					<img class="undefined__pic" src="./images/undefined-pic.png" alt="newspaper">
+				</div>
 				<ul class="favorite-list">
 					<!--<li class="favorite-item"-->
 				</ul>
