--- a/src/read.html
+++ b/src/read.html
@@ -1,177 +1,203 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Page title</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&family=Poppins&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./sass/index.scss" />
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Page title</title>
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-	<link rel="icon" href="favicon.ico" type="image/x-icon" />
-	<link
-		href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&family=Poppins&family=Roboto&display=swap"
-		rel="stylesheet" />
-	<link rel="stylesheet" href="./sass/index.scss" />
-</head>
+  <body class="">
+    <header class="header">
+      <div class="mobile-menu visually-hidden">
+        <div class="container menu-container">
+          <a href="./index.html" class="logo">News</a>
+          <button class="js-close-button">
+            <svg class="icon-close" width="24px" height="24px">
+              <use href="./images/sprite.svg#icon-menu-close"></use>
+            </svg>
+          </button>
+        </div>
+        <nav class="menu-nav">
+          <ul class="menu-nav__list">
+            <li class="menu-nav__item">
+              <a class="container menu-nav__link" href="./index.html">
+                <div class="link-back-wrapper">
+                  <div class="link-text-wrapper">
+                    <svg class="menu-nav__icon" width="32" height="32">
+                      <use href="./images/sprite.svg#icon-home"></use>
+                    </svg>
 
-<body class="">
-	<header class="header">
-		<div class="mobile-menu visually-hidden">
-			<div class="container menu-container">
-				<a href="./index.html" class="logo">News</a>
-				<button class="js-close-button">
-					<svg class="icon-close" width="24px" height="24px">
-						<use href="./images/sprite.svg#icon-menu-close"></use>
-					</svg>
-				</button>
-			</div>
-			<nav class="menu-nav">
-				<ul class="menu-nav__list">
-					<li class="menu-nav__item">
-						<a class="container menu-nav__link" href="./index.html">
-							<div class="link-back-wrapper">
-								<div class="link-text-wrapper">
-									<svg class="menu-nav__icon" width="32" height="32">
-										<use href="./images/sprite.svg#icon-home"></use>
-									</svg>
+                    <p class="menu-nav__text">Home</p>
+                  </div>
 
-									<p class="menu-nav__text">Home</p>
-								</div>
+                  <svg class="menu-nav__link--arrow" width="24" height="24">
+                    <use
+                      href="./images/sprite.svg#icon-mobileMenu-rightArrow"
+                    ></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li class="menu-nav__item">
+              <a class="container menu-nav__link" href="./favorite.html">
+                <div class="link-back-wrapper">
+                  <div class="link-text-wrapper">
+                    <svg class="menu-nav__icon" width="32" height="32">
+                      <use href="./images/sprite.svg#icon-heart-menu"></use>
+                    </svg>
+                    <p class="menu-nav__text">Favourite</p>
+                  </div>
+                  <svg class="menu-nav__link--arrow" width="24" height="24">
+                    <use
+                      href="./images/sprite.svg#icon-mobileMenu-rightArrow"
+                    ></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li class="menu-nav__item">
+              <a
+                class="container menu-nav__link menu-nav__link--current"
+                href="./read.html"
+              >
+                <div class="link-back-wrapper">
+                  <div class="link-text-wrapper">
+                    <svg class="menu-nav__icon" width="32" height="32">
+                      <use href="./images/sprite.svg#icon-read"></use>
+                    </svg>
+                    <p class="menu-nav__text">Read</p>
+                  </div>
+                  <svg class="menu-nav__link--arrow" width="24" height="24">
+                    <use
+                      href="./images/sprite.svg#icon-mobileMenu-rightArrow"
+                    ></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="container theme mobile-theme">
+          <svg class="theme__svg sun" width="21" height="21">
+            <use href="./images/sprite.svg#icon-sun"></use>
+          </svg>
 
-								<svg class="menu-nav__link--arrow" width="24" height="24">
-									<use href="./images/sprite.svg#icon-mobileMenu-rightArrow"></use>
-								</svg>
-							</div>
-						</a>
-					</li>
-					<li class="menu-nav__item">
-						<a class="container menu-nav__link" href="./favorite.html">
-							<div class="link-back-wrapper">
-								<div class="link-text-wrapper">
-									<svg class="menu-nav__icon" width="32" height="32">
-										<use href="./images/sprite.svg#icon-heart-menu"></use>
-									</svg>
-									<p class="menu-nav__text">Favourite</p>
-								</div>
-								<svg class="menu-nav__link--arrow" width="24" height="24">
-									<use href="./images/sprite.svg#icon-mobileMenu-rightArrow"></use>
-								</svg>
-							</div>
-						</a>
-					</li>
-					<li class="menu-nav__item">
-						<a class="container menu-nav__link menu-nav__link--current" href="./read.html">
-							<div class="link-back-wrapper">
-								<div class="link-text-wrapper">
-									<svg class="menu-nav__icon" width="32" height="32">
-										<use href="./images/sprite.svg#icon-read"></use>
-									</svg>
-									<p class="menu-nav__text">Read</p>
-								</div>
-								<svg class="menu-nav__link--arrow" width="24" height="24">
-									<use href="./images/sprite.svg#icon-mobileMenu-rightArrow"></use>
-								</svg>
-							</div>
-						</a>
-					</li>
-				</ul>
-			</nav>
-			<div class="container theme mobile-theme">
-				<svg class="theme__svg sun" width="21" height="21">
-					<use href="./images/sprite.svg#icon-sun"></use>
-				</svg>
+          <label class="switch">
+            <input type="checkbox" class="switch-checkbox-mobile" />
+            <span class="slider-round"></span>
+          </label>
 
-				<label class="switch">
-					<input type="checkbox" class="switch-checkbox-mobile" />
-					<span class="slider-round"></span>
-				</label>
+          <svg class="theme__svg moon" width="21" height="21">
+            <use href="./images/sprite.svg#icon-moon"></use>
+          </svg>
+        </div>
+      </div>
 
-				<svg class="theme__svg moon" width="21" height="21">
-					<use href="./images/sprite.svg#icon-moon"></use>
-				</svg>
-			</div>
-		</div>
+      <div class="header-container container">
+        <div class="nav-wrapper">
+          <a href="./index.html" class="logo">News</a>
+          <nav class="navigation visually-hidden">
+            <ul class="navlist">
+              <li class="navlist__item">
+                <a href="./index.html" class="navlist__link">Home</a>
+              </li>
 
-		<div class="header-container container">
-			<div class="nav-wrapper">
-				<a href="./index.html" class="logo">News</a>
-				<nav class="navigation visually-hidden">
-					<ul class="navlist">
-						<li class="navlist__item">
-							<a href="./index.html" class="navlist__link">Home</a>
-						</li>
+              <li class="navlist__item">
+                <a href="./favorite.html" class="navlist__link">Favorite</a>
+              </li>
 
-						<li class="navlist__item">
-							<a href="./favorite.html" class="navlist__link">Favorite</a>
-						</li>
+              <li class="navlist__item">
+                <a
+                  href="./read.html"
+                  class="navlist__link navlist__link--current"
+                  >Read</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div>
 
-						<li class="navlist__item">
-							<a href="./read.html" class="navlist__link navlist__link--current">Read</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
+        <div class="menu-wrapper">
+          <div class="search-wrapper">
+            <form class="search-form" id="form-field">
+              <label class="search-form__label">
+                <input
+                  class="search-form__input"
+                  type="text"
+                  id="search-field__input"
+                  placeholder="Search |"
+                />
+              </label>
+              <button type="submit" class="search-form__btn" id="form-btn">
+                <svg class="search-form__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-search"></use>
+                </svg>
+              </button>
+            </form>
 
-			<div class="menu-wrapper">
-				<div class="search-wrapper">
-					<form class="search-form" id="form-field">
-						<label class="search-form__label">
-							<input class="search-form__input" type="text" id="search-field__input"
-								placeholder="Search |" />
-						</label>
-						<button type="submit" class="search-form__btn" id="form-btn">
-							<svg class="search-form__icon" width="20" height="20">
-								<use href="./images/sprite.svg#icon-search"></use>
-							</svg>
-						</button>
-					</form>
+            <button type="button" class="search-btn" id="search-btn">
+              <svg class="search-form__icon" width="20" height="20">
+                <use href="./images/sprite.svg#icon-search"></use>
+              </svg>
+            </button>
+          </div>
+          <div class="theme">
+            <svg class="theme__svg sun" width="21" height="21">
+              <use href="./images/sprite.svg#icon-sun"></use>
+            </svg>
 
-					<button type="button" class="search-btn" id="search-btn">
-						<svg class="search-form__icon" width="20" height="20">
-							<use href="./images/sprite.svg#icon-search"></use>
-						</svg>
-					</button>
-				</div>
-				<div class="theme">
-					<svg class="theme__svg sun" width="21" height="21">
-						<use href="./images/sprite.svg#icon-sun"></use>
-					</svg>
+            <p class="theme__light">Light</p>
 
-					<p class="theme__light">Light</p>
+            <label class="switch">
+              <input type="checkbox" class="switch-checkbox" />
+              <span class="slider-round"></span>
+            </label>
 
-					<label class="switch">
-						<input type="checkbox" class="switch-checkbox" />
-						<span class="slider-round"></span>
-					</label>
+            <p class="theme__dark opacity">Dark</p>
 
-					<p class="theme__dark opacity">Dark</p>
+            <svg class="theme__svg moon" width="21" height="21">
+              <use href="./images/sprite.svg#icon-moon"></use>
+            </svg>
+          </div>
 
-					<svg class="theme__svg moon" width="21" height="21">
-						<use href="./images/sprite.svg#icon-moon"></use>
-					</svg>
-				</div>
-
-				<button type="button" class="mobile-button js-open-menu" aria-expanded="false">
-					<svg class="icon" width="24" height="24">
-						<use href="./images/sprite.svg#icon-menu-burger"></use>
-					</svg>
-				</button>
-			</div>
-		</div>
-	</header>
-	<main>
-		<h1 class="visually-hidden">Read</h1>
-		<section class="read-page">
-			<div class="container">
-				<div class="undefined">
-					<b class="undefined__text">We haven’t found news from <br> this category</b>
-					<img class="undefined__pic" src="./images/undefined-pic.png" alt="newspaper">
-				</div>
-				<ul class="read-list">
-				</ul>
-			</div>
-		</section>
-	</main>
-	<script type="module" src="./js/read-page.js"></script>
-</body>
-
+          <button
+            type="button"
+            class="mobile-button js-open-menu"
+            aria-expanded="false"
+          >
+            <svg class="icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-menu-burger"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
+    </header>
+    <main>
+      <h1 class="visually-hidden">Read</h1>
+      <section class="read-page">
+        <div class="container">
+          <div class="undefined">
+            <b class="undefined__text"
+              >We haven’t found news from <br />
+              this category</b
+            >
+            <img
+              class="undefined__pic"
+              src="./images/undefined-pic.png"
+              alt="newspaper"
+            />
+          </div>
+          <ul class="read-list"></ul>
+        </div>
+      </section>
+    </main>
+    <script type="module" src="./js/read/read-page.js"></script>
+  </body>
 </html>
